--- a/templates/callback.html
+++ b/templates/callback.html
@@ -4,8 +4,8 @@
 <div class="spotify-grid">
     <div class="login-container">
         <h1>Elli Spotify</h1>
-        <p>Connect to your Spotify account with your Elli</p>
-        <a href="/spotify/auth" class="spotify-button">Connect to Spotify</a>
+        <p>Connected to Spotify!!</p>
+        <p>Your scope is: {{ scope }}</p>
     </div>
 </div>
 {% endblock %}
