--- a/templates/base.html
+++ b/templates/base.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-US">
 <head>
     <meta charset="utf-8">
     <title>Elli-Spotify</title>
     <link rel="stylesheet" href="/static/css/styles.css">
 </head>
 <body>
-    {% block content %}{% endblock %}
+{% block content %}{% endblock %}
 </body>
 </html>
