first fetch in place but refresh fails...

--- a/templates/connect.html
+++ b/templates/connect.html
@@ -4,7 +4,8 @@
 <div class="spotify-grid">
     <div class="login-container">
         <h1>Elli Spotify</h1>
-        <p>You are connected!!</p>
+        <p>Connect to your Spotify account with your Elli</p>
+        <a href="/spotify/auth" class="spotify-button">Connect to Spotify</a>
     </div>
 </div>
 {% endblock %}
