--- a/templates/index.html
+++ b/templates/index.html
@@ -2,9 +2,15 @@
 
 {% block content %}
 <div class="spotify-grid">
-    <div class="login-container">
+    <div class="now-playing-container">
         <h1>Elli Spotify</h1>
-        <p>You are connected!!</p>
+        <div class="track-info-card">
+            <img src="{{ player_status.image_url }}" alt="Album cover" class="album-art">
+            <div class="track-details">
+                <h2 class="track-name">{{ player_status.name }}</h2>
+                <span class="secondary-text"> {{ player_status.artists | join(", ") }}</span>
+            </div>
+        </div>
     </div>
 </div>
 {% endblock %}
