--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,20 +1,60 @@
-/* Spotify-inspired styling */
-body {
-    font-family: 'Circular', Helvetica, Arial, sans-serif;
-    line-height: 1.6;
-    margin: 0;
-    padding: 0;
-    background-color: #121212; /* Spotify dark background */
-    color: #ffffff;
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
+
+* {
+    font-family: 'Montserrat', sans-serif !important;
 }
 
-/* Grid layout */
-.spotify-grid {
+body {
+    margin: 0;
+    padding: 0;
+}
+
+button {
+    border: 1px solid #28a745;
+    background-color: transparent;
+    color: #28a745;
+    border-radius: 0.25rem;
+    padding: 0.375rem 0.75rem;
+    font-size: 1rem;
+    line-height: 1.5;
+}
+
+button:hover {
+    color: #fff;
+    background-color: #28a745;
+}
+
+input[type="text"] {
+    border: 1px solid;
+    border-radius: 0.25rem;
+    font-size: 1rem;
+    line-height: 1.5;
+    padding: 0.375rem 0.75rem;
+}
+
+p {
+    margin: 1em 0;
+}
+
+h2 {
+    margin-bottom: 0.2em;
+}
+
+main {
+    min-width: 20rem;
+}
+
+
+.template-container {
     display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: 1fr;
     place-items: center;
     min-height: 100vh;
+}
+
+.flex-column {
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
 }
 
 .album-art {
@@ -49,23 +89,8 @@ body {
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.4);
 }
 
-h1 {
-    color: #ffffff;
-    font-weight: 700;
-    margin-bottom: 20px;
-    font-size: 32px;
-}
-
-p {
-    color: #b3b3b3; /* Spotify's secondary text color */
-    font-size: 18px;
-    margin-bottom: 30px;
-    line-height: 1.5;
-}
-
 /* Spotify button styling */
 .spotify-button {
-    display: inline-block;
     background-color: #1DB954; /* Spotify green */
     color: #ffffff;
     font-weight: 700;
@@ -78,6 +103,7 @@ p {
     transition: all 0.3s ease;
     cursor: pointer;
     border: none;
+    text-align: center;
 }
 
 .spotify-button:hover {
@@ -87,25 +113,4 @@ p {
 
 .spotify-button:active {
     transform: scale(0.98);
-}
-
-/* Add responsiveness */
-@media (max-width: 600px) {
-    .login-container {
-        width: 85%;
-        padding: 25px;
-    }
-
-    h1 {
-        font-size: 24px;
-    }
-
-    p {
-        font-size: 16px;
-    }
-
-    .spotify-button {
-        padding: 14px 28px;
-        font-size: 14px;
-    }
 }
