--- a/templates/base.html
+++ b/templates/base.html
@@ -4,6 +4,10 @@
     <meta charset="utf-8">
     <title>Elli-Spotify</title>
     <link rel="stylesheet" href="/static/css/styles.css">
+    <link rel="icon" href="https://elemonlabs.com/wp-content/uploads/2020/08/logo_transparent-150x150.png"
+          sizes="32x32">
+    <link rel="icon" href="https://elemonlabs.com/wp-content/uploads/2020/08/logo_transparent-300x300.png"
+          sizes="192x192">
 </head>
 <body>
 {% block content %}{% endblock %}
