--- a/templates/device.html
+++ b/templates/device.html
@@ -7,7 +7,9 @@
         <p class="flex-column">
             Your device code is: {{ ccc }}
         </p>
-        <a href="/spotify/auth" class="spotify-button">Connect to Spotify</a>
+        <button>
+            <a href="/spotify/auth">Connect to Spotify</a>
+        </button>
     </main>
 </div>
 {% endblock %}
