--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -32,6 +32,16 @@ button:hover {
     background-color: #28a745;
 }
 
+.red-btn {
+    color: red;
+    border-color: red;
+}
+
+.red-btn:hover {
+    background-color: red;
+    color: #fff;
+}
+
 input[type="text"] {
     border: 1px solid;
     border-radius: 0.25rem;
@@ -63,6 +73,10 @@ main {
     display: flex;
     flex-direction: column;
     align-items: stretch;
+}
+
+.gap {
+    gap: 2rem;
 }
 
 .album-art {
@@ -99,7 +113,6 @@ main {
 
 .matrix-grid {
     display: grid;
-    margin-top: 4em;
 }
 
 .matrix-cell {
@@ -112,7 +125,6 @@ main {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin: 2em 0 1em;
     color: #888;
     animation: bounce 2s infinite;
 }
@@ -124,30 +136,4 @@ main {
     50% {
         transform: translateY(6px);
     }
-}
-
-/* Spotify button styling */
-.spotify-button {
-    background-color: #1DB954; /* Spotify green */
-    color: #ffffff;
-    font-weight: 700;
-    text-decoration: none;
-    padding: 16px 32px;
-    border-radius: 30px;
-    font-size: 16px;
-    text-transform: uppercase;
-    letter-spacing: 1px;
-    transition: all 0.3s ease;
-    cursor: pointer;
-    border: none;
-    text-align: center;
-}
-
-.spotify-button:hover {
-    background-color: #1ed760; /* Lighter Spotify green on hover */
-    transform: scale(1.05);
-}
-
-.spotify-button:active {
-    transform: scale(0.98);
 }
