show something when nothing is playing

--- a/templates/notrack.html
+++ b/templates/notrack.html
@@ -4,12 +4,10 @@
 <div class="template-container">
     <main class="flex-column gap">
         <div class="flex-column">
-            <h2>Connect your Spotify</h2>
-            <span>To device: {{ ccc }}</span>
+            <h2>You are connected!</h2>
+            <span>Play a track to display it on your elli.</span>
+            <span>Your elli code is: {{ccc}}</span>
         </div>
-        <button>
-            <a href="/spotify/auth">Connect to Spotify</a>
-        </button>
         <button class="red-btn">
             <a href="/">Select another device</a>
         </button>
